example/secondfile/objects/Source__c.object
<CustomObject>
    <description>Contains the initial details for every marketing interaction with an SP</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relation  with Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Lead_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Interaction__c</fullName>
        <label>Date of Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Other_please_specify__c</fullName>
        <label>If Other, please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Lead_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Origin__c</fullName>
        <label>Record Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Created</fullName>
                    <default>true</default>
                    <label>User Created</label>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SP_Status__c</fullName>
        <inlineHelpText>Displays whether interaction occurred when SP was a Lead or had been converted to an Account</inlineHelpText>
        <label>SP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <label>Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>APEX Summit (Oct 2014)</fullName>
                </value>
                <value>
                    <fullName>APEX Summit (Oct 2015)</fullName>
                </value>
                <value>
                    <fullName>APEX Summit (Oct 2016)</fullName>
                </value>
                <value>
                    <fullName>Channel Partners (Vegas - Mar 2016)</fullName>
                </value>
                <value>
                    <fullName>Cisco Partner Summit (San Diego - Feb 2016)</fullName>
                </value>
                <value>
                    <fullName>Cloud Partners (DC - Aug 2016)</fullName>
                </value>
                <value>
                    <fullName>Cloud Services Community</fullName>
                </value>
                <value>
                    <fullName>CompTIA (FL - Aug 2016)</fullName>
                </value>
                <value>
                    <fullName>CRN (The Channel Company)</fullName>
                </value>
                <value>
                    <fullName>CTIA (Vegas - Sep 2016)</fullName>
                </value>
                <value>
                    <fullName>GEN16 (Nov 2016)</fullName>
                </value>
                <value>
                    <fullName>GNOC Tour (Bedminster Jan 2016)</fullName>
                </value>
                <value>
                    <fullName>INCOMPAS (Dallas - Oct 2016)</fullName>
                </value>
                <value>
                    <fullName>INCOMPAS (DC - Apr 2016)</fullName>
                </value>
                <value>
                    <fullName>ITW (Chicago - May 2016)</fullName>
                </value>
                <value>
                    <fullName>Metro Connect (Miami - Jan 2016)</fullName>
                </value>
                <value>
                    <fullName>MSP Mentor</fullName>
                </value>
                <value>
                    <fullName>Navigate 2016 (Sept)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Telecom Exchange (NY - June 2016)</fullName>
                </value>
                <value>
                    <fullName>Think Tank June 2014</fullName>
                </value>
                <value>
                    <fullName>Think Tank June 2015</fullName>
                </value>
                <value>
                    <fullName>Think Tank Oct 2014</fullName>
                </value>
                <value>
                    <fullName>Think Tank Oct 2015</fullName>
                </value>
                <value>
                    <fullName>VAR GUY</fullName>
                </value>
                <value>
                    <fullName>WOTC (NY - Nov 2016)</fullName>
                </value>
                <value>
                    <fullName>Xchange BOB (Atlanta - Oct 2016)</fullName>
                </value>
                <value>
                    <fullName>Comptel Spring 2014</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Event/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Another Solution Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Source</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{00000}</displayFormat>
        <label>Source ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Source_Detail_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Validation_Flag__c==false,
 IF(ISPICKVAL(Source_Type__c,&apos;Email&apos;)||ISPICKVAL (Source_Type__c,&apos;Event/Tradeshow&apos;),
ISPICKVAL(Source_Detail__c,&apos;&apos;),null)
)</errorConditionFormula>
        <errorMessage>To mark Source Type as Email or Event/Tradeshow, Please select  a value in Source Detail.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Source_Type_and_Source_Detail_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Validation_Flag__c==false, 
 ISPICKVAL(Record_Origin__c,&apos;User Created&apos;),
 ISBLANK(If_Other_please_specify__c),
 OR
(
  ISPICKVAL(Source_Type__c,&apos;Other&apos;)&amp;&amp;ISPICKVAL (Source_Detail__c,&apos;&apos;)||ISPICKVAL(Source_Detail__c,&apos;Other&apos;)
)
)</errorConditionFormula>
        <errorMessage>To mark Source Type as Other and Source Detail as Null or Source Detail as Other Please enter a value in &quot;If Other, please specify&quot; when Record Origin is User Created</errorMessage>
    </validationRules>
</CustomObject>